<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/lightGrey"
    tools:context=".HighScoresActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center">
        <TextView
            android:id="@+id/highScoresTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/high_scores_button_label"
            android:layout_marginVertical="30dp"
            android:layout_marginBottom="50dp"
            android:fontFamily="@font/frijole"
            android:textSize="40sp"
            android:textAlignment="center"
            android:textColor="@color/highlightedBlue"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/lastScoreView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:text="@string/last_score"
                android:textSize="24sp"
                android:layout_gravity="center"
                android:textColor="@color/highlightedRed"/>
            <Button
                android:id="@+id/newGameButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_margin="20dp"
                android:textSize="24sp"
                android:text="@string/start_new_game"
                android:layout_gravity="center"
                android:background="@color/highlightedGreen"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginVertical="10dp">
            <TextView
                android:id="@+id/rankLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/rankLabel"
                android:textSize="20sp"
                android:textAlignment="center"
                android:textColor="@color/black"/>
            <TextView
                android:id="@+id/scoreLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/scoreLabel"
                android:textSize="20sp"
                android:textAlignment="center"
                android:textColor="@color/black"/>
            <TextView
                android:id="@+id/dateLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/dateLabel"
                android:textSize="20sp"
                android:textAlignment="center"
                android:textColor="@color/black"/>
        </LinearLayout>
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/highScoresRecyclerView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>